Z-index fix to keep header in front

--- a/themes/basilisk/sass/components/_application-header.scss
+++ b/themes/basilisk/sass/components/_application-header.scss
@@ -4,6 +4,7 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 1000;
 
 	a {
 		@include link-colors($white, $white, $white, $white, $white);
